# PhysX

./: Dockerfile  README.md  babylonjs.ipynb  dockerci.yml  simplest.ipynb
.github/workflows/: testa.yml
Actions/: Dockerfile.physx  workflow_testa.sh
Examples/Babylonjs/: CMakeLists.txt  RUNNER.sh  babylon_template.html  fields.hpp  main.cpp  physx2babylonjs.py
Examples/PxConvexMesh/: CMakeLists.txt  RUNNER.sh  objs2physx.ipynb  vtk_tools.py
Examples/PxConvexMesh/Babylon/: babylon_template.html
Examples/PxConvexMesh/Sources/: convex_mesh_create.hpp  load_file.hpp  main.cpp  triangle_mesh_create.hpp
Examples/Simplest/: CMakeLists.txt  RUNNER.sh  simplest.cpp
Examples/SnippetHelloWorld/: simplest.cpp  simulation.hpp
GetGeometry/: CMakeLists.txt  RUNNER.sh  babylon00b.ipynb  babylon10b.html  extract_geometry.hpp  main.cpp  simplest.cpp  simplest.ipynb  simulation.hpp  snippetHelloWorld.ipynb
github/workflows/: testa.yml
